Add all source files to src/

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload" : {
         "psr-4": {
-            "Moccalotto\\Ssh\\": ""
+            "Moccalotto\\Ssh\\": "src/"
         }
     }
 }
